kubernetes/manifests/apps/wordpress/namespace-wordpress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wp-proyecto
  labels:
    env: produccion
    app: wordpress
