kubernetes/manifests/apps/wordpress/wordpress.yml
# --- PARTE 1: EL SERVICIO (Acceso interno) ---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wp-proyecto
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend # [VITAL] Filtra para conectar solo con los pods de la web
---
# --- PARTE 2: EL DESPLIEGUE (La aplicación web) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wp-proyecto
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - image: wordpress:6.4-apache # [PERSONALIZABLE] Versión de WP con servidor Apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/lib/wordpress/wp-content # [FIJO] Carpeta de fotos y temas de WP
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pvc           # [FIJO] El PVC de 10GB que creamos al principio
