kubernetes/manifests/apps/wordpress/ingress-wordpress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wp-proyecto
spec:
  ingressClassName: nginx  # <--- Esta es la forma moderna que sugiere el warning
  rules:
  - host: wordpress.asir.local  # [PERSONALIZABLE] La URL que pondrás en tu navegador
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service # Debe coincidir con el nombre del servicio del Paso 5
            port:
              number: 80
